procuct code committed

--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -26,10 +26,10 @@
 .card-content {
   padding: 10px 10px;
 }
-.card-container:hover {
+/* .card-container:hover {
   transform: scale(1.01);
   cursor: pointer;
-}
+} */
 .divider {
   margin-top: -124px;
   margin-right: -434px;
